--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Game</title>
+		<title>Optics Game</title>
 		<meta charset="utf-8">
 		<meta description="Optics">
 		
