--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<link href="css/page.css" rel="stylesheet">
 
 
+		<script src="js/math.js"></script>
 		<script src="js/drawer.js"></script>
 		<script src="js/board.js"></script>
 		<script src="js/main.js"></script>
