--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 
 	</head>
 	<body>
+		<div id="fps" class="control">
+			0 fps
+		</div>
 		<div id="wrapper">
 			<canvas id="board" width="800" height="600">
 				Canvas is not avaliable on your browser.
