--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 
 	</head>
 	<body>
-		<div id="fps" class="control">
-			0 fps
+		<div id="commands">
+			<div id="fps" class="control">
+				0 fps
+			</div>
 		</div>
 		<div id="wrapper">
 			<canvas id="board" width="800" height="600">
