--- a/index.html
+++ b/index.html
@@ -19,10 +19,14 @@
 				0 fps
 			</div>
 		</div>
-		<div id="wrapper">
-			<canvas id="board" width="800" height="600">
+		<div id="wrapper" width='800' height='600'>
+			<canvas class='cv' id="bground">
 				Canvas is not avaliable on your browser.
 			</canvas>
+			<canvas class='cv' id="board" width='800' height='600'>
+				Canvas is not avaliable on your browser.
+			</canvas>
+
 		</div>
 	</body>
 </html>
