--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 		<script src="js/drawer.js"></script>
 		<script src="js/board.js"></script>
+		<script src="js/interface.js"></script>
 		<script src="js/main.js"></script>
 
 	</head>
@@ -20,10 +21,10 @@
 			</div>
 		</div>
 		<div id="wrapper" width='800' height='600'>
-			<canvas class='cv' id="bground">
+			<canvas class='cv' id="board" width='800' height='600'>
 				Canvas is not avaliable on your browser.
 			</canvas>
-			<canvas class='cv' id="board" width='800' height='600'>
+			<canvas class='cv' id="buttons" width='800' height='600'>
 				Canvas is not avaliable on your browser.
 			</canvas>
 
