Files reorganized and objetcs can be turned

--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
 		</script>
 		<script src="js/physics.js"></script>
 		<script src="js/geometry.js"></script>
+
 		<script src="js/drawer.js"></script>
+		
+		<script src="js/laser.js"></script>
+		<script src="js/mirror.js"></script>
+		<script src="js/objects.js"></script>
+
 		<script src="js/board.js"></script>
 		<script src="js/interface.js"></script>
 		<script src="js/main.js"></script>
