Levels added via file

--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
 				window[str] = window[str] || {};
 			};
 
+			module("Levels");
+
 		</script>
+
+		<!-- Levels in JSON-->
+		<script src="levels/test.json"></script>
+
 		<script src="js/physics.js"></script>
 		<script src="js/geometry.js"></script>
 
